Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/StoreClass.out
StoreClass.java:12:19: compiler.err.cant.assign.val.to.final.var: class
StoreClass.java:13:12: compiler.err.cant.assign.val.to.final.var: class
2 errors
